# FQ-reimplemented

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ReadParser.h  ReadParser.hpp  a.out  cmake_install.cmake  compress.hpp  gzip_utils.hpp  igzip_lib.h  izlib.h  kseq.h  lisal.txt  main.cpp  test.cpp
a.out.dSYM/Contents/Resources/DWARF/: a.out
igzip/: adler32_avx2_4.lo  adler32_base.lo  adler32_sse.lo  encode_df.lo  encode_df_04.lo  encode_df_06.lo  flatten_ll.lo  huff_codes.lo  hufftables_c.lo  igzip.lo  igzip_base.lo  igzip_body.lo  igzip_decode_block_stateless_01.lo  igzip_decode_block_stateless_04.lo  igzip_deflate_hash.lo  igzip_finish.lo  igzip_gen_icf_map_lh1_04.lo  igzip_gen_icf_map_lh1_06.lo  igzip_icf_base.lo  igzip_icf_body.lo  igzip_icf_body_h1_gr_bt.lo  igzip_icf_finish.lo  igzip_inflate.lo  igzip_inflate_multibinary.lo  igzip_multibinary.lo  igzip_set_long_icf_fg_04.lo  igzip_set_long_icf_fg_06.lo  igzip_update_histogram_01.lo  igzip_update_histogram_04.lo  proc_heap.lo  rfc1951_lookup.lo
igzip/.deps/: adler32_base.Plo  encode_df.Plo  flatten_ll.Plo  huff_codes.Plo  hufftables_c.Plo  igzip.Plo  igzip_base.Plo  igzip_icf_base.Plo  igzip_icf_body.Plo  igzip_inflate.Plo
include/: barcode_utils.hpp  datamatrix_utils.hpp  gzip_utils.hpp
lib/: libisal.2.dylib
lib/pkgconfig/: libisal.pc
